--- a/Khoi/Linux bridge/1.Tìm hiểu Linux bridge.md
+++ b/Khoi/Linux bridge/1.Tìm hiểu Linux bridge.md
@@ -280,4 +280,11 @@ Dùng lệnh sau `brctl show` kết quả hiển thị như hình vẽ đồng n
 ![](./image/Screenshot_6.png)
 
 
+Thực hiện xem lại IP :
+
+
+![](./image/Screenshot_7.png)
+
+
+
 
