--- a/Khoi/Linux bridge/3.Lab Linux bridge.md
+++ b/Khoi/Linux bridge/3.Lab Linux bridge.md
@@ -31,3 +31,13 @@ Thực hiện ping 8.8.8.8 khi tắt 1 card mạng đi
 ![](./image/Screenshot_25.png)
 
 
+
+
+
+![](./image/Screenshot_28.png)
+
+
+
+
+
+
