--- a/Khoi/Tìm hiểu API/1.API_Basic.md
+++ b/Khoi/Tìm hiểu API/1.API_Basic.md
@@ -11,6 +11,31 @@ API là một tập hợp các quy tắc và định nghĩa mô tả cách các 
 ### Một ví dụ cụ thể cho dễ hiểu về API : 
 
 
+
+**Giả sử bạn đang ở một quán cà phê và bạn muốn gọi một ly cà phê.**
+
+Bạn là khách hàng,muốn gọi đồ uống
+Quầy pha chế , nơi pha chế đồ uống 
+Người phục vụ là API , nhận yêu cầu và mang nó đến quầy pha chế
+
+ API giúp dễ dàng yêu cầu và nhận dịch vụ mà không cần phải tương tác trực tiếp với hệ thống nội bộ của quán cà phê.
+
+Hoặc muốn kết nối giữa điện thoại và máy tính cần dây cap : dây cap ở đây là API
+
+
+**API của Dịch Vụ Đặt Xe**
+Khi muốn đặt một chiếc xe từ ứng dụng gọi xe
+
+Yêu Cầu (Request): mở ứng dụng gọi xe và yêu cầu đặt xe từ vị trí hiện tại của đến một địa điểm cụ thể.
+API Hoạt Động Thế Nào: Ứng dụng sẽ gửi một yêu cầu đến server của dịch vụ gọi xe để kiểm tra xem có tài xế nào gần đó không và có thể đón bạn.
+Phản Hồi (Response): Server sẽ trả về thông tin về tài xế, thời gian đón dự kiến, và giá cước. Ứng dụng hiển thị thông tin này cho bạn.
+
+
+
+
+
+
+
 ![](./image/Screenshot_1.png)
 
 
@@ -57,7 +82,7 @@ API được hoạt động theo các loại khác nhau:
 
 **API Websocket**: Hỗ trợ hoạt động giao tiếp giữa máy khách và máy chủ. Máy chủ có thể gửi thông điệp gọi lại cho các máy khách được kết nối, điều này khiến loại API này hiệu quả hơn loại API REST.
 
-**API Rest:** Đây là loại API phổ biến và phát triển nhất hiện nay. Điều nay sẽ được chúng tôi lý giải trong phần tiếp theo của bài.
+**API Rest:** Đây là loại API phổ biến và phát triển nhất hiện nay
 
 
 
@@ -65,6 +90,47 @@ API được hoạt động theo các loại khác nhau:
 
 **API của 1 device/thiết bị** : SDK (Software Development Kit)
             VD : IP cam ... có sẵn các hàm đi kèm driver để mình giao tiếp với thiết bị
+
+
+
+![](./image/Screenshot_5.png)
+
+
+
+
+1. REST (Chuyển giao trạng thái đại diện) :
+REST là một phong cách kiến ​​trúc được áp dụng rộng rãi để thiết kế các ứng dụng nối mạng.
+Nó nhấn mạnh đến sự tương tác giữa máy khách và máy chủ không trạng thái, trong đó tài nguyên của máy chủ được biểu diễn và thao tác bằng các phương thức HTTP được tiêu chuẩn hóa (GET, POST, PUT, DELETE).
+Tài nguyên được xác định bằng URL (Bộ định vị tài nguyên thống nhất) và dữ liệu có thể được trao đổi ở nhiều định dạng khác nhau như JSON hoặc XML.
+
+
+
+2. GraphQL  :
+GraphQL là một kiểu kiến ​​trúc API do Facebook phát triển nhằm cung cấp giải pháp thay thế linh hoạt và hiệu quả hơn cho REST.
+Khách hàng có thể yêu cầu chính xác dữ liệu họ cần, giảm việc tìm nạp quá mức và tìm nạp không đầy đủ dữ liệu.
+Máy chủ xác định một lược đồ và máy khách truy vấn các trường và mối quan hệ cụ thể trong lược đồ đó.
+
+3. SOAP (Giao thức truy cập đối tượng đơn giản) :
+SOAP là một giao thức trao đổi thông tin có cấu trúc trong việc triển khai các dịch vụ web.
+Nó dựa vào XML để định dạng thư và có thể được vận chuyển qua nhiều giao thức khác nhau, bao gồm HTTP, SMTP, v.v.
+Các dịch vụ SOAP có các hoạt động và cấu trúc được xác định trước, khiến nó cứng nhắc hơn so với REST.
+
+4. JSON-RPC :
+JSON-RPC là giao thức gọi thủ tục từ xa (RPC) được mã hóa bằng JSON.
+Nó cho phép khách hàng gọi các phương thức trên máy chủ từ xa bằng cách sử dụng các thông báo dựa trên JSON qua HTTP hoặc các giao thức truyền tải khác.
+
+
+5. gRPC :
+gRPC là khung RPC (Gọi thủ tục từ xa) hiệu suất cao được phát triển bởi Google.
+Nó sử dụng Bộ đệm giao thức (protobuf) làm ngôn ngữ định nghĩa giao diện và hỗ trợ nhiều ngôn ngữ lập trình.
+gRPC cung cấp các tính năng như truyền phát hai chiều, xác thực và cân bằng tải.
+
+6. WebSocket :
+WebSocket là một giao thức cho phép các kênh liên lạc song công hoàn toàn qua một kết nối TCP.
+Nó cho phép giao tiếp tương tác theo thời gian thực giữa máy khách và máy chủ.
+WebSockets thường được sử dụng cho các ứng dụng yêu cầu cập nhật dữ liệu liên tục, chẳng hạn như ứng dụng trò chuyện và trò chơi trực tuyến.
+
+
 
 
 ### 3.1 API Rest,API Restfull
@@ -202,5 +268,7 @@ Phản hồi: Dịch vụ sẽ trả về một thông điệp SOAP khác chứa
 Ưu điểm lớn nhất của SOAP là tính độc lập với ngôn ngữ, một đặc điểm quan trọng giúp nó trở thành một chuẩn mực chung cho việc giao tiếp giữa các ứng dụng. Khả năng này cho phép các ứng dụng chạy trên nền tảng và ngôn ngữ lập trình khác nhau có thể giao tiếp một cách hiệu quả.
 
 Điểm mạnh tiếp theo của SOAP nằm ở khả năng tận dụng các giao thức truyền tải đa dạng. Bằng cách này, SOAP không chỉ bị giới hạn trong việc sử dụng một giao thức cụ thể, mà còn có khả năng thích ứng với nhiều loại giao thức như SMTP, HTTP, và các giao thức khác. Điều này giúp tối ưu hóa hiệu suất và tích hợp SOAP vào nhiều môi trường hệ thống khác nhau.
+
+
 
 
