--- a/Khoi/Tìm hiểu API/3.lab_netbox.md
+++ b/Khoi/Tìm hiểu API/3.lab_netbox.md
@@ -1,4 +1,4 @@
-##Mục lục
+## Mục lục
 [Lab tìm hiểu lấy thông tin trong netbox bằng API bằng lệnh curl](#bài-lab-thực-hiện)
 
 [Curl là gì?](#curl-là-gì)
@@ -6,7 +6,11 @@
      [lấy-thông-tin-của-tất-cả-các-tủ-rack ](#vd--lấy-thông-tin-của-tất-cả-các-tủ-rack)
      [vd--muốn-lấy-thông-tin-các-device-trong-tủ-rack-id-là-1 ](#vd--muốn-lấy-thông-tin-các-device-trong-tủ-rack-id-là-1)
      [vd--thực-hiện-chèn-thay-đổi-thông-tin-của-tủ-rack)](#vd--thực-hiện-chèn-thay-đổi-thông-tin-của-tủ-rack)  
-     [vd--thực-hiện-thêm-1-tủ-rack-bằng-api](#vd--thực-hiện-thêm-1-tủ-rack-bằng-api)
+     [vd--thực-hiện-thêm-1-tủ-rack-bằng-api][def]
+
+
+
+
 
 
 
@@ -309,3 +313,6 @@ curl -H "Authorization: Token 06e542ae682c6b9ebadd4fe8b4e74f4b11982d57" \
 
 
 
+
+
+[def]: #vd--thực-hiện-thêm-1-tủ-rack-bằng-api
