--- a/Khoi/Tìm hiểu API/2.Phương thức http  && cấu trúc lệnh với curl.md
+++ b/Khoi/Tìm hiểu API/2.Phương thức http  && cấu trúc lệnh với curl.md
@@ -1,12 +1,15 @@
 # Mục lục 
 
-[1.Các Phương thức của HTTP trong restful api ](#1)
+
+
+[1.Các Phương thức của HTTP trong restful api ](#các-phương-thức-của-http-trong-restful-api)
     - [1.1.Phương thức GET](#phương-thức-get)
       - [1.2 Phương thức POST](#phương-thức-post)
     - [1.3 Phương thức PUT ](#phương-thức-put)
     - [1.3 Phương thức DELETE](#phương-thức-delete)
     - [1.4 Phương thức PATCH](#phương-thức-patch)
     - [1.4 Phương thức HEAD](#phương-thức-head)
+
 
 
 
@@ -27,6 +30,13 @@
     - [4.2 ipam](#ipam-ip-address-management)
     -   [4.3 tenancy](#tenancy)
     -   [4.4 virtualization](#virtualization)
+
+
+
+
+
+
+
 
 
 
