--- a/Khoi/Check_MK/08.Cảnh báo tele.md
+++ b/Khoi/Check_MK/08.Cảnh báo tele.md
@@ -70,8 +70,7 @@ Thực hiện tạo 1 file` telegram.py`
 
 Sửa nội dung trong file telegram thành như sau:
 
-Cần điền api token và IP và ID group : (IP là IP của site) 
-
+Cần điền api token và ID group 
 ```
 #!/bin/bash
 # Push Notification (using Telegram)
@@ -213,3 +212,6 @@ Check thông báo gửi về qua tele
 
 
 
+Tài liệu tham khảo :
+
+[đây](https://github.com/filipnet/checkmk-telegram-notify)
